# OpenCVJavaNDKExample

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/jaden/opencvjavandkexample/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/source/: native-lib.cpp
app/src/main/java/com/jaden/opencvjavandkexample/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/jaden/opencvjavandkexample/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
